--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,10 @@ Build.bat
 Makefile
 Makefile.old
 MANIFEST.bak
-META.yml
 MYMETA.yml
+META.json
 nytprof.out
 pm_to_blib
+Printer-Thermal*
+perltidy.LOG
+*.swp
