Attempting to fix Pod

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Printer-Thermal 
-author  = Shantanu Bhadoria <shantanu at cpan dott org>
+author  = Shantanu Bhadoria (shantanu@cpan.org)
 copyright_holder = Shantanu Bhadoria
 license = Perl_5
 
@@ -23,3 +23,7 @@ stopwords = atttt
 stopwords = bhadoria
 stopwords = barcode
 stopwords = doublestrike
+stopwords = POS
+stopwords = att
+stopwords = cutpaper
+stopwords = dott
