Deprecating in favour of Printer::ESCPOS

--- a/dist.ini
+++ b/dist.ini
@@ -3,10 +3,12 @@ author  = Shantanu Bhadoria (shantanu@cpan.org)
 copyright_holder = Shantanu Bhadoria
 license = Perl_5
 
+[Deprecated]
 [@SHANTANU]
 fake_release = 0
 no_git=0
 stopwords = ESC
+stopwords = ESCPOS
 stopwords = Epson
 stopwords = baudrate
 stopwords = heatInterval
